# mobileNet2tensorRT

./: README.md  mobileNetTrt.py  mobileTensorRT.py
src/: CMakeLists.txt  main.cpp
